<resources>
    <string name="app_name">Regional Kontaktlos Gesund</string>

    <string name="availability">Verfügbarkeit</string>
    <string name="price">Preis:</string>
    <string name="amount">Menge:</string>

    <string name="menuOrders">Bestellungen</string>
    <string name="menuSortiment">Sortiment</string>
    <string name="menuStore">Mein Stand</string>

    <string name="opening_hours_template">%1$s - %2$s Uhr</string>
    <string name="opening_hours">Öffnungszeiten</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Di</string>
    <string name="wednesday_short">Mi</string>
    <string name="thursday_short">Do</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">So</string>

    <string name="owner">Betreiber</string>
    <string name="email_label">E-Mail:</string>
    <string name="name_label">Name:</string>

    <string name="availabilityFull">Viel</string>
    <string name="availabilityMedium">Mittel</string>
    <string name="availabilityLow">Wenig</string>
    <string name="availabilityNone">Keine</string>
    <string name="edit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="deleteConfirm">Möchten Sie das Produkt wirklich löschen?</string>
    <string name="changedSuccessfully">Erfolgreich geändert.</string>

    <string name="mail">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="name">Name</string>
    <string name="register">Registrieren</string>
    <string name="errorMail">E-Mail Adresse ungültig</string>
    <string name="errorName">Name ungültig</string>
    <string name="errorPassword">Passwort ungültig</string>

    <string name="openingTimesSaved">Öffnungszeiten gespeichert</string>
    <string name="openingTimesEmptyError">Bitte wählen Sie Ihre Öffnungszeiten aus</string>

    <string name="genericError">Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.</string>
    <string name="locationPermissionDeniedError">Standort kann nicht ohne Berechtigung ermittelt werden</string>
    <string name="locationRetrievalError">Fehler beim Ermitteln des Standorts</string>
    <string name="locationCoordinateTemplate">Breitengrad: %1$f | Längengrad: %2$f</string>

    <string name="priceTemplate">Gesamtpreis: %s</string>

    <string-array name="productTypes">
        <item>Spargel</item>
        <item>Erdbeere</item>
    </string-array>
    <string name="type">Typ</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="amountHint">Menge</string>
    <string name="priceHint">Preis</string>

    <string name="location">Standort</string>
    <string name="retrieveLocation">Standort ermitteln</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="opens">Öffnet</string>
    <string name="closes">Schließt</string>
    <string name="pleaseSelect">Bitte wählen</string>
    <string name="closed">geschlossen</string>
</resources>
